--- a/locale/de/LC_MESSAGES/module_muboard.po
+++ b/locale/de/LC_MESSAGES/module_muboard.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: MUBoard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-08-08 14:38+0000\n"
-"PO-Revision-Date: 2013-09-03 08:13+0100\n"
+"PO-Revision-Date: 2013-09-07 15:27+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -1013,7 +1013,7 @@ msgstr "Thema: "
 
 #: lib/MUBoard/Api/Ajax.php:98
 msgid ""
-"Sorry! If you want to create an new issue you have to enter a title and a "
+"Sorry! If you want to create a new issue you have to enter a title and a "
 "text to get a preview!"
 msgstr ""
 "Entschuldigung! Wenn Du ein Thema erstellen möchtest, musst Du einen Titel "
@@ -1021,7 +1021,7 @@ msgstr ""
 
 #: lib/MUBoard/Api/Ajax.php:101
 msgid ""
-"Sorry! If you want to create an new issue or to edit an existing issue you "
+"Sorry! If you want to create a new issue or to edit an existing issue you "
 "have to enter a title to get a preview!"
 msgstr ""
 "Entschuldigung! Wenn Du ein Thema erstellen oder ein bestehendes Thema "
