--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -1,4 +1,10 @@
 CHANGELOG
 ---------
 
-Changes in MUBoard 1.0.0
+Changes in MUBoard 1.1.0
+
+
+
+Some other fixes
+
+# fixed issue with preview answering to an issue; now we get the complete preview shown in chrome too
