--- a/locale/de/LC_MESSAGES/module_muboard_js.po
+++ b/locale/de/LC_MESSAGES/module_muboard_js.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MUBoard Javascript\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-08-08 14:38+0000\n"
-"PO-Revision-Date: 2013-08-08 16:54+0100\n"
+"POT-Creation-Date: 2015-01-13 08:49+0000\n"
+"PO-Revision-Date: 2015-01-13 09:58+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.4\n"
-"Language: deutsch\n"
+"X-Generator: Poedit 1.6.9\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: javascript/MUBoard_validation.js:8
